One more bug squashed.

--- a/css/index.css
+++ b/css/index.css
@@ -206,6 +206,11 @@ nav a:hover {
 }
 @media (max-width: 500px) {
   nav a {
+    margin-left: 3%;
+  }
+}
+@media (max-width: 500px) {
+  nav a {
     flex-basis: 24%;
   }
 }
